export enum Routes {
  HOME = 'Home',
  CONFIG_TRACKING = 'Configuration Tracking',
  PAGE_TRACKING = 'Page Tracking',
  ACTION_TRACKING = 'Action Tracking',
  CAMPAIGN_TRACKING = 'Campaign Tracking',
  ECOMMERCE_TRACKING = 'Ecommerce Tracking',
  MEDIA_TRACKING = 'Media Tracking',
  EXCEPTION_TRACKING = 'Exceptions Tracking',
  WEBVIEW_TRACKING = 'Webview Tracking',
  STREAMING_VIDEO_EXAMPLE = 'Streaming Video Example',
  VIDEO_EXAMPLE = 'Video Example',
  MANUAL_MEDIA_TRACKING = 'Manual Media Tracking',
  FETCH_EXAMPLE = 'Fetch Example',
  PLUGIN_INTEGRATION_TEST = 'Plugin Integration Test',
}
